# friends-connect-example

./: Cargo.toml  README.md
src/: main.rs
src/static/: index.html
