[package]
name = "friends-connect-example"
version = "0.1.0"
edition = "2021"

[dependencies]
friends-connect = { path = "../friends-connect" }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }